[tool.poetry]
name = "poetrytutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.1"
pandas = "^2.2.0"
django = "4.2.9"
requests = "^2.31.0"
toml = "^0.10.2"
fastapi = "^0.109.0"
mypy = "^1.8.0"
pydantic = "^2.5.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
pre-commit = "^3.6.0"
flake8 = "^7.0.0"
ruff = "^0.1.14"


[tool.poetry.group.local.dependencies]
pandas = "^2.2.0"


[tool.poetry.group.prod.dependencies]
hello-world = "^0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
